--- a/data_utils/input/trip_synthesis.ipynb
+++ b/data_utils/input/trip_synthesis.ipynb
@@ -11,22 +11,14 @@
     "## Inputs\n",
     "All data from 2016 TTS survey, where the 44-ward model was still in use. The core principle is this: use the distribution of trip counts, split across different attributes (location, time, income, age), to create a smaller, synthetic dataset with sampled attributes.\n",
     "\n",
-    "### TTS \n",
-    "#### Legend\n",
-    "* OW: Ward number of origin (1-44)\n",
-    "* DW: Ward number of destination (1-44)\n",
-    "* ST: Start time of trip (Estimated to nearest 5th minute)\n",
-    "* TM: Primary mode of travel (T: taxi, U: paid rideshare)\n",
-    "* IL: Income range of household (1: <15K, 2: 15-40K, 3: 40-60K, 4: 60-100K, 5: 100-125K, 6: 125K+, 7: UNK)\n",
-    "* Age: Age of person (Split into ranges: 11-20, 21-30, ..., 61-70, 71+, UNK) \n",
+    "### TTS\n",
+    "Query Criteria:\n",
+    "- Tabulation type: Cross Tabulation\n",
+    "- Data type: Trip\n",
+    "- Survey Year: 2016\n",
+    "- Expansion Factor: ON\n",
     "\n",
-    "#### Summary\n",
-    "| Row Attribute      | Col Attribute    | Purpose | Filters |\n",
-    "| ------------- |:-------------:| --------------:|-------------:|\n",
-    "| OW | DW | Sample trip start/end wards and locations | TM=T,U |\n",
-    "| ST | DW | Sample trip start times | OW={1-44} & TM=T,U |\n",
-    "| ST | DW | Sample income level of traveler | OW={1-44} & IL={1-7} & TM=T,U |\n",
-    "| ST | DW | Sample age of traveler | OW={1-44} & Age & TM=T,U |\n",
+    "More query details are below in the notebook as we go.\n",
     "\n",
     "### Utilities\n",
     "* 44-ward boundaries shapefile: for sampling coordinates after we've sampled the origin and destination wards. Source: https://open.toronto.ca/dataset/city-wards/\n",
@@ -70,7 +62,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 1: Sample trip origin/destination"
+    "# Part 1: Sample trip origin/destination\n",
+    "\n",
+    "Filter variables:\n",
+    "- Row Attribute: Ward number of origin\n",
+    "- Column Attribute: Ward number of destination\n",
+    "\n",
+    "Filter selection:\n",
+    "- Primary travel mode of trip `IN` T (Taxi passenger), U (Paid rideshare)"
    ]
   },
   {
@@ -1249,7 +1248,15 @@
    "source": [
     "# Part 2: Sample trip start timestamps\n",
     "\n",
-    "For each origin ward, we have a distribution of start times across destination ward. Combine these together so we can sample a start time for a given (OW, DW) pair. "
+    "For each origin ward $w_o$, I download a count table of destination ward and start time of trip. Normalizing the counts to get a probability distribution, we randomly sample a start time for a given $(w_o, w_d)$ pair.\n",
+    "\n",
+    "Filter variables:\n",
+    "- Row Attribute: Start time of trip\n",
+    "- Column Attribute: Ward number of destination\n",
+    "\n",
+    "Filter selection:\n",
+    "- Primary travel mode of trip `IN` T, U\n",
+    "- Ward number of origin `IN` $w_o$"
    ]
   },
   {
@@ -1430,7 +1437,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 3: Calculate trip distance, duration, and end timestamp"
+    "# Part 3: Calculate trip distance, duration, and end timestamp\n",
+    "\n",
+    "Trip distance and duration are not actually that useful for the simulation, but they provide a sanity check for the trips. During scenario creation we'll filter out trips that are too long or short. Haversine distance is used for the trip distance, and the duration is calculated by assuming a constant speed of 60 km/h."
    ]
   },
   {
@@ -1491,7 +1500,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 4: Sample income and age attributes"
+    "# Part 4: Sample income and age attributes\n",
+    "\n",
+    "There are 6 income groups: 0-15K, 15-40K, 40-60K, 60-100K, 100-125K, 125K+, and UNK (unknown), and I divide age into 7 ranges: 11-20, 21-30, 31-40, 41-50, 51-60, 61-70, 71+, and UNK (unknown). The attribute sampling process uses common filter variables for both age and income.\n",
+    "\n",
+    "Filter variables:\n",
+    "- Row Attribute: Start time of trip\n",
+    "- Column Attribute: Ward number of destination\n",
+    "- Additional Attribute: Ward number of origin\n",
+    "\n",
+    "Filter selection:\n",
+    "- Primary travel mode of trip `IN` T, U\n",
+    "- Ward number of origin `IN` 1-44\n",
+    "- Ward number of destination `IN` 1-44\n",
+    "- (AGE) Age of person `IN` <Age range\\>\n",
+    "- (INCOME) Income range of household `IN` <Income group\\>\n",
+    "\n",
+    "Preprocessing of the query results to obtain the count tables is done in the `attribute_dist.py` file."
    ]
   },
   {
